--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
   - gem update --system
   - gem install rake
 script:
-  - rake rake host:test
+  - rake host:test
 notifications:
   email:
     on_success: change
