--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ addons:
 before_install:
   - gem update --system
   - gem install rake
+install:
+  - rake install
 script:
   - rake host:test
 notifications:
