--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,11 @@ addons:
   apt:
     packages:
       - ninja-build
+      - gcc-5
+      - g++-5
+    env:
+      - CC=gcc-5
+      - CXX=g++-5
 before_install:
   - gem update --system
   - gem install rake
