--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ addons:
       - CC=gcc-5
       - CXX=g++-5
 before_install:
+  - sudo apt-get update -qq
+  - sudo apt-get install -y libopencv-dev
   - gem update --system
   - gem install rake
 install:
