--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,14 @@
 language: c++
 sudo: required
 dist: trusty
-
-matrix:
-  include:
-    - compiler gcc
-      addons:
-        apt:
-          packages:
-            - gcc-5
-            - g++-5
-          env:
-            - CC=gcc-5
-            - CXX=g++-5
-
-
+compiler: gcc
+os:
+  - linux
+addons:
+  apt:
+    packages:
+      - ninja-build
 before_install:
-  - sudo apt-get update -qq
-  - sudo apt-get install -y libopencv-dev ninja-build
   - gem update --system
   - gem install rake
 install:
