--- a/Firmware/libraries/Bt_INA219_Library/library.properties
+++ b/Firmware/libraries/Bt_INA219_Library/library.properties
@@ -1,4 +1,4 @@
-name=Bittailor Solar Monitor Slave Controller
+name=Bittailor INA219 
 version=0.0.1
 author=bittailor
 maintainer=bittailor <info@bittailor.ch>
