--- a/Firmware/.cproject
+++ b/Firmware/.cproject
@@ -65,7 +65,11 @@
 							<option id="cdt.managedbuild.option.gnu.cross.prefix.1719060038" name="Prefix" superClass="cdt.managedbuild.option.gnu.cross.prefix"/>
 							<option id="cdt.managedbuild.option.gnu.cross.path.580174055" name="Path" superClass="cdt.managedbuild.option.gnu.cross.path"/>
 							<targetPlatform archList="all" binaryParser="org.eclipse.cdt.core.ELF;org.eclipse.cdt.core.MachO64" id="cdt.managedbuild.targetPlatform.gnu.cross.1295661016" isAbstract="false" osList="all" superClass="cdt.managedbuild.targetPlatform.gnu.cross"/>
-							<builder command="rake" id="cdt.managedbuild.builder.gnu.cross.721125671" incrementalBuildTarget="host:test" keepEnvironmentInBuildfile="false" managedBuildOn="false" name="Gnu Make Builder" superClass="cdt.managedbuild.builder.gnu.cross"/>
+							<builder command="rake" id="cdt.managedbuild.builder.gnu.cross.721125671" incrementalBuildTarget="host:test" keepEnvironmentInBuildfile="false" managedBuildOn="false" name="Gnu Make Builder" superClass="cdt.managedbuild.builder.gnu.cross">
+								<outputEntries>
+									<entry flags="VALUE_WORKSPACE_PATH" kind="outputPath" name="Target"/>
+								</outputEntries>
+							</builder>
 							<tool id="cdt.managedbuild.tool.gnu.cross.c.compiler.568007903" name="Cross GCC Compiler" superClass="cdt.managedbuild.tool.gnu.cross.c.compiler">
 								<inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.1217761783" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
 							</tool>
@@ -100,8 +104,15 @@
 			<resource resourceType="PROJECT" workspacePath="/Firmware"/>
 		</configuration>
 	</storageModule>
+	<storageModule moduleId="org.eclipse.cdt.internal.ui.text.commentOwnerProjectMappings"/>
 	<storageModule moduleId="scannerConfiguration">
 		<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
+		<scannerConfigBuildInfo instanceId="cdt.managedbuild.toolchain.gnu.cross.base.2111398302.1995794434;cdt.managedbuild.toolchain.gnu.cross.base.2111398302.1995794434.;cdt.managedbuild.tool.gnu.cross.c.compiler.568007903;cdt.managedbuild.tool.gnu.c.compiler.input.1217761783">
+			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
+		</scannerConfigBuildInfo>
+		<scannerConfigBuildInfo instanceId="cdt.managedbuild.toolchain.gnu.cross.base.2111398302.1995794434;cdt.managedbuild.toolchain.gnu.cross.base.2111398302.1995794434.;cdt.managedbuild.tool.gnu.cross.cpp.compiler.1078027180;cdt.managedbuild.tool.gnu.cpp.compiler.input.1967592233">
+			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
+		</scannerConfigBuildInfo>
 		<scannerConfigBuildInfo instanceId="cdt.managedbuild.toolchain.gnu.cross.base.2111398302;cdt.managedbuild.toolchain.gnu.cross.base.2111398302.1873724716;cdt.managedbuild.tool.gnu.cross.c.compiler.955457119;cdt.managedbuild.tool.gnu.c.compiler.input.462990319">
 			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
 		</scannerConfigBuildInfo>
@@ -109,5 +120,4 @@
 			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
 		</scannerConfigBuildInfo>
 	</storageModule>
-	<storageModule moduleId="org.eclipse.cdt.internal.ui.text.commentOwnerProjectMappings"/>
 </cproject>
