--- a/Firmware/.cproject
+++ b/Firmware/.cproject
@@ -116,7 +116,7 @@
 							<option id="cdt.managedbuild.option.gnu.cross.prefix.791244239" name="Prefix" superClass="cdt.managedbuild.option.gnu.cross.prefix"/>
 							<option id="cdt.managedbuild.option.gnu.cross.path.1909038570" name="Path" superClass="cdt.managedbuild.option.gnu.cross.path"/>
 							<targetPlatform archList="all" binaryParser="org.eclipse.cdt.core.ELF;org.eclipse.cdt.core.MachO64" id="cdt.managedbuild.targetPlatform.gnu.cross.2048836416" isAbstract="false" osList="all" superClass="cdt.managedbuild.targetPlatform.gnu.cross"/>
-							<builder command="rake" id="cdt.managedbuild.builder.gnu.cross.125951100" incrementalBuildTarget="host:test compile_arduino_SolarMonitor compile_arduino_SolarMonitorIOSlave" keepEnvironmentInBuildfile="false" managedBuildOn="false" name="Gnu Make Builder" superClass="cdt.managedbuild.builder.gnu.cross">
+							<builder command="rake" id="cdt.managedbuild.builder.gnu.cross.125951100" incrementalBuildTarget="host:test compile_arduino_Spike_GprsModule compile_arduino_SolarMonitor compile_arduino_SolarMonitorIOSlave" keepEnvironmentInBuildfile="false" managedBuildOn="false" name="Gnu Make Builder" superClass="cdt.managedbuild.builder.gnu.cross">
 								<outputEntries>
 									<entry flags="VALUE_WORKSPACE_PATH" kind="outputPath" name="Target"/>
 								</outputEntries>
