--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,15 @@ addons:
   apt:
     packages:
       - ninja-build
+      - gcc-6
+      - g++-6
 before_install:
   - gem update --system
   - gem install rake
 install:
   - rake install
 script:
+  - g++ -v
   - rake host:test
 notifications:
   email:
