--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ addons:
       - ninja-build
       - gcc-6
       - g++-6
+    sources: &sources
+        - ubuntu-toolchain-r-test
 before_install:
   - gem update --system
   - gem install rake
