--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,7 @@ addons:
     sources: &sources
         - ubuntu-toolchain-r-test
 env:
-  - CC = gcc-6
-  - CXX = g++-6
+  - CC=gcc-6 CXX=g++-6
 before_install:
   - gem update --system
   - gem install rake
