--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ addons:
 compiler: gcc-6
 
 before_install:
+  - export CC=gcc-6
+  - export CXX=g++-6
   - gem update --system
   - gem install rake
 install:
